--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             <hr>
                 
             <h3>👀 ¿Ya nos conocemos?</h3>   
-                <p>✅ Déjanos una <a href="https://g.page/r/CSW7t4EwKIlgEBM/review" target="_blank">reseña positiva </a></p> 
-                <p>❌ Déjanos una <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">reseña negativa </a></p>
+                <p>➕ Déjanos una <a href="https://g.page/r/CSW7t4EwKIlgEBM/review" target="_blank">reseña positiva </a></p> 
+                <p>➖ Déjanos una <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">reseña negativa </a></p>
 
         </div>
     </div>
