--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <hr>
                 
             <h3>👀 ¿Ya nos conocemos?</h3>   
-                <p>Déjanos una <a href="https://g.page/r/CSW7t4EwKIlgEBM/review" target="_blank">reseña positiva</a> o una <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">reseña negativa</a>. Eso ya es tu elección.</p> 
+                <p>Déjanos una <a href="https://g.page/r/CSW7t4EwKIlgEBM/review" target="_blank">reseña positiva</a> o una <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">reseña negativa</a>. Tú decides.</p> 
             <hr>
                <br><br>
             <p><em>"Tu cocina merece lo mejor. Y lo mejor, casualmente, lo vendemos nosotros." (1/8)</em></p>
