--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <footer style="text-align: center; padding: 20px; margin-top: 40px; background-color: #f8f8f8; font-size: 14px; color: #333;">
         <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-bottom: 10px;">
             <img src="infrico.png" alt="Logo Infrico" style="height: 50px; opacity: 0.5;">
+            <img src="miele.png" alt="Logo Miele" style="height: 50px; opacity: 0.5;">
             <img src="fricosmos.png" alt="Logo Fricosmos" style="height: 50px; opacity: 0.5;">
             <img src="impafri.png" alt="Logo Impafri" style="height: 37.5px; opacity: 0.5;"> <!-- Reducido 25% -->
             <img src="intarcon.png" alt="Logo Intarcon" style="height: 30px; opacity: 0.5;"> <!-- Reducido 25% -->
