--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <ul style="list-style: none; padding: 0;">
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/yim997t0pdrs87fltvo5k/catalogo-infrico-ES.pdf?rlkey=hx0fsrd024t2fig953dontk5u&st=aizts39x&dl=1" target="_blank">Catálogo INFRICO.pdf (general)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?rlkey=yo8yelhafefxjrv0tbzqsrw9b&st=w2t61pr4&dl=1" target="_blank">Catálogo FRICOSMOS.pdf (inox varios)</a></li>
-                <li>📄 <a href="https://www.dropbox.com/scl/fi/tctdlsbd8q8qyyg4d0chg/Cat-logo-Lavavajillas-Octubre-2023.pdf?rlkey=hp4f435w3yfjrqst4kd6em7be&st=xhpvd582&dl=1" target="_blank">Catálogo MIELE.pdf (Lavavajillas Profesionales)</a></li>
-                <li>📄 <a href="https://www.dropbox.com/scl/fi/pihfekzouj25vwgf5rqw9/catalogo_lavanderia_miele.pdf?rlkey=3juxi7dyqooxftx11vwfdnfke&st=dctb3kxa&dl=1" target="_blank">Catálogo MIELE (Lavandería).pdf (repuestos)</a></li>
+                <li>📄 <a href="https://www.dropbox.com/scl/fi/tctdlsbd8q8qyyg4d0chg/Cat-logo-Lavavajillas-Octubre-2023.pdf?rlkey=hp4f435w3yfjrqst4kd6em7be&st=xhpvd582&dl=1" target="_blank">Catálogo MIELE.pdf (lavavajillas Profesionales)</a></li>
+                <li>📄 <a href="https://www.dropbox.com/scl/fi/pihfekzouj25vwgf5rqw9/catalogo_lavanderia_miele.pdf?rlkey=3juxi7dyqooxftx11vwfdnfke&st=dctb3kxa&dl=1" target="_blank">Catálogo MIELE.pdf (lavandería)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?rlkey=9xzodewwbvzrrrijmlw18vyta&st=3k2zqcps&dl=1" target="_blank">Catálogo TECNOINOX.pdf</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/tie326s9yegvzfb84c52c/camaras-infrico.pdf?rlkey=ml89uyxfxkkoab9eu5z4boty2&st=y7ypo0gf&dl=1" target="_blank">Catálogo IMPAFRI.pdf (cámaras)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/mcprpl7zdrv4l1zbg5pfp/catalogo-fribuffet.pdf?rlkey=0djsldozy48xe8dxrtkuzv3fa&st=qu6rmibv&dl=1" target="_blank">Catálogo FRIBUFFET.pdf</a></li>
