--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
         <a href="https://www.tecnoinox.it/" target="_blank">
             <img src="tecnoinox.png" alt="Logo Tecnoinox" style="height: 50px; opacity: 0.5;">
         </a>
+        <a href="https://www.tecnoinox.it/" target="_blank">
+            <img src="eurofours.png" alt="Logo Eurofours" style="height: 50px; opacity: 0.5;">
+        </a>
     </div>
     <br>
     <p>©2025 GastroSAT. Todos los derechos reservados.</p>
