--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/tctdlsbd8q8qyyg4d0chg/Cat-logo-Lavavajillas-Octubre-2023.pdf?rlkey=hp4f435w3yfjrqst4kd6em7be&st=xhpvd582&dl=1" target="_blank">Catálogo MIELE.pdf (lavavajillas Profesionales)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/pihfekzouj25vwgf5rqw9/catalogo_lavanderia_miele.pdf?rlkey=3juxi7dyqooxftx11vwfdnfke&st=dctb3kxa&dl=1" target="_blank">Catálogo MIELE.pdf (lavandería)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?rlkey=9xzodewwbvzrrrijmlw18vyta&st=3k2zqcps&dl=1" target="_blank">Catálogo TECNOINOX.pdf</a></li>
+                <li>📄 <a href="https://www.dropbox.com/scl/fi/96hoy8xqt3nukgzh481es/Eurofours-2022.pdf?rlkey=l6i6b39z83brgk08yo685rkcr&st=xthxplmt&dl=1" target="_blank">Catálogo EUROFOURS.pdf (Panadería)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/tie326s9yegvzfb84c52c/camaras-infrico.pdf?rlkey=ml89uyxfxkkoab9eu5z4boty2&st=y7ypo0gf&dl=1" target="_blank">Catálogo IMPAFRI.pdf (cámaras)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/mcprpl7zdrv4l1zbg5pfp/catalogo-fribuffet.pdf?rlkey=0djsldozy48xe8dxrtkuzv3fa&st=qu6rmibv&dl=1" target="_blank">Catálogo FRIBUFFET.pdf</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/51hkfsvzcrjarr2lahv1g/cocinas-infrico.pdf?rlkey=tvg9nj444lacx6isadb5fjcw7&st=bo43aoy5&dl=1" target="_blank">Catálogo INFRICO.pdf (cocinas)</a></li>
@@ -98,7 +99,7 @@
         <a href="https://www.tecnoinox.it/" target="_blank">
             <img src="tecnoinox.png" alt="Logo Tecnoinox" style="height: 50px; opacity: 0.5;">
         </a>
-        <a href="https://www.tecnoinox.it/" target="_blank">
+        <a href="https://www.eurofours.com/es" target="_blank">
             <img src="eurofours.png" alt="Logo Eurofours" style="height: 50px; opacity: 0.5;">
         </a>
     </div>
