--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- Caja de contenido sin borde -->
         <div style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
             <h2>🚀 Bienvenido/a a GastroSAT</h2>
-            <p><strong>Servicio de Asistencia Técnica & Equipamiento para profesionales de la hostelería de Mallorca.</strong></p>
+            <p><strong>Servicio de Asistencia Técnica & Equipamiento Profesional para la Hostelería en Mallorca.</strong></p>
 
             <p>Cuando no podemos reparar una máquina, te vendemos una nueva. Por eso nuestras cifras de ventas son tan bajas.📉</p>
 
