--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <h3>📂 Descarga nuestros catálogos</h3>
             <ul style="list-style: none; padding: 0;">
-                <li>📄 <a href="https://www.dropbox.com/scl/fi/yim997t0pdrs87fltvo5k/catalogo-infrico-ES.pdf?rlkey=hx0fsrd024t2fig953dontk5u&st=aizts39x&dl=1" target="_blank">Catálogo INFRICO.pdf (general)</a></li>
+                <li>📄 <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?st=tbsiu9tq&dl=1" target="_blank">Catálogo INFRICO.pdf (general 2025)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?rlkey=yo8yelhafefxjrv0tbzqsrw9b&st=w2t61pr4&dl=1" target="_blank">Catálogo FRICOSMOS.pdf (inox varios)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/tctdlsbd8q8qyyg4d0chg/Cat-logo-Lavavajillas-Octubre-2023.pdf?rlkey=hp4f435w3yfjrqst4kd6em7be&st=xhpvd582&dl=1" target="_blank">Catálogo MIELE.pdf (lavavajillas Profesionales)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/pihfekzouj25vwgf5rqw9/catalogo_lavanderia_miele.pdf?rlkey=3juxi7dyqooxftx11vwfdnfke&st=dctb3kxa&dl=1" target="_blank">Catálogo MIELE.pdf (lavandería)</a></li>
