--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <!-- Caja de contenido sin borde -->
         <div style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
-            <h2>🚀 Bienvenido/a a GastroSAT</h2>
+            <h2>🚀 Bienvenido/a a GastroSat</h2>
             <p><strong>Servicio de Asistencia Técnica & Equipamiento Profesional para la Hostelería en Mallorca.</strong></p>
 
             <p>Cuando no podemos reparar una máquina, te vendemos una nueva. Por eso nuestras cifras de ventas son tan bajas.📉</p>
@@ -104,7 +104,7 @@
         </a>
     </div>
     <br>
-    <p>©2025 GastroSAT. Todos los derechos reservados.</p>
+    <p>©2025 GastroSat. Todos los derechos reservados.</p>
     <p>Desarrollado con 💚 por <strong>GastroSAT</strong></p>
 </footer>
 
