--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 20px; max-width: 90%; margin: auto;">
         <!-- Logo -->
-        <img src="logov5.jpg" alt="GastroSAT Logo" style="width: 100%; max-width: 300px; height: auto; margin-top:-200;">
+        <img src="logov5.jpg" alt="GastroSAT Logo" style="width: 100%; max-width: 330px; height: auto;">
 
         <!-- Caja de contenido sin borde -->
         <div style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
