--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <meta property="og:image" content="https://gastrosat.com/logov5.jpg">
     <meta property="og:url" content="https://gastrosat.com">
     <meta property="og:type" content="website">
+
+    <style>
+    @media (min-width: 768px) {
+        img[alt="GastroSAT Logo"] {
+            align-self: flex-start;
+            margin-right: 40px;
+        }
+    }
+    </style>
 </head>
 <body style="margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; text-align: center;">
 
