--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 
     <style>
     @media (min-width: 768px) {
-        img[alt="GastroSAT Logo"] {
-            align-self: flex-start;
-            margin-right: 40px;
+    img[alt="GastroSAT Logo"] {
+        align-self: flex-start !important;
+        margin-right: 40px !important;
         }
     }
+
     </style>
 </head>
 <body style="margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; text-align: center;">
