--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body style="margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; text-align: center;">
 
-    <div style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 20px; max-width: 90%; margin: auto;">
+    <div style="display: flex; flex-wrap: flex-start; align-items: center; justify-content: center; padding: 20px; max-width: 90%; margin: auto;">
         <!-- Logo -->
         <img src="logov5.jpg" alt="GastroSat Logo" style="width: 100%; max-width: 300px; height: auto;">
 
