--- a/index.html
+++ b/index.html
@@ -18,20 +18,11 @@
     <meta property="og:image" content="https://gastrosat.com/logov5.jpg">
     <meta property="og:url" content="https://gastrosat.com">
     <meta property="og:type" content="website">
-
-    <style>
-    @media (min-width: 768px) {
-    img[alt="GastroSAT Logo"] {
-        align-self: flex-start !important;
-        margin-right: 40px !important;
-        }
-    }
-
-    </style>
+    
 </head>
 <body style="margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; text-align: center;">
 
-    <div style="display: flex; flex-wrap: flex-start; align-items: center; justify-content: center; padding: 20px; max-width: 90%; margin: auto;">
+    <div style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 20px; max-width: 90%; margin: auto;">
         <!-- Logo -->
         <img src="logov5.jpg" alt="GastroSat Logo" style="width: 100%; max-width: 300px; height: auto;">
 
