--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>GastroSAT | Asistencia Técnica y Equipamiento para Hostelería</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="GastroSAT ofrece asistencia técnica y venta de equipamiento para hostelería en Mallorca. Reparación, mantenimiento e instalación de maquinaria industrial.">
+    <meta name="description" content="GastroSat ofrece asistencia técnica y venta de equipamiento para hostelería en Mallorca. Reparación, mantenimiento e instalación de maquinaria industrial.">
     <meta name="keywords" content="asistencia técnica hostelería, reparación de maquinaria hostelería, venta de equipamiento hostelería, comprar maquinaria industrial, mantenimiento equipos industriales, servicio técnico maquinaria, reparación maquinaria Mallorca, equipamiento para hostelería, repuestos maquinaria hostelería, instalación de maquinaria, Fricosmos, Tecnoinox, Infrico, Impafri, Intarcon, hornos industriales, vitrinas refrigeradas, lavavajillas industriales, freidoras industriales, maquinaria de frío, servicio técnico en Mallorca, reparación maquinaria en Palma, asistencia técnica en Baleares, equipamiento para hoteles Mallorca, maquinaria para restaurantes Palma, venta de maquinaria hostelería, comprar equipamiento para restaurantes, distribuidor de maquinaria industrial, maquinaria para hoteles en Mallorca, maquinaria de cocina industrial, proveedores de equipamiento gastronómico, venta de hornos industriales, comprar lavavajillas industriales, maquinaria de frío industrial">
-    <meta name="author" content="GastroSAT">
+    <meta name="author" content="GastroSat">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph (para compartir en redes sociales) -->
