--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <title>GastroSAT | Asistencia Técnica y Equipamiento para Hostelería</title>
+    <title>GastroSat | Asistencia Técnica y Equipamiento para Hostelería</title>
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="GastroSat ofrece asistencia técnica y venta de equipamiento para hostelería en Mallorca. Reparación, mantenimiento e instalación de maquinaria industrial.">
