--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Favicon estándar -->
+<link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
+
+<!-- Favicons en diferentes tamaños para mejor compatibilidad -->
+<link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="192x192" href="favicon_io/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="favicon_io/android-chrome-512x512.png">
+
+<!-- Apple Touch Icon (para iOS y dispositivos Apple) -->
+<link rel="apple-touch-icon" href="favicon_io/apple-touch-icon.png">
+
+<!-- Web Manifest (para Progressive Web Apps) -->
+<link rel="manifest" href="favicon_io/site.webmanifest">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
