--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </div>
     <br>
     <p>©2025 GastroSat. Todos los derechos reservados.</p>
-    <p>Desarrollado con 💚 por <strong>GastroSAT</strong></p>
+    <p>Desarrollado con 💚 por <strong>GastroSat</strong></p>
 </footer>
 
 
