--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
             <img src="tecnoinox.png" alt="Logo Tecnoinox" style="height: 50px; opacity: 0.5;">
         </a>
         <br>
-        <a href="https://www.eurofours.com/es" target="_blank">
-            <img src="eurofours.png" alt="Logo Eurofours" style="height: 50px; opacity: 0.5;">
+        <a href="https://www.eurofours.com/es" target="_blank" style="flex-basis: 100%; text-align: center;">
+    <img src="eurofours.png" alt="Logo Eurofours" style="height: 50px; opacity: 0.5;">
+</a>
         </a>
     </div>
     <br>
