--- a/index.html
+++ b/index.html
@@ -114,12 +114,33 @@
         </a>
         <a href="https://www.tecnoinox.it/" target="_blank">
             <img src="tecnoinox.png" alt="Logo Tecnoinox" style="height: 50px; opacity: 0.5;">
-        </a>
-        <br>
+        </a>        
         <a href="https://www.eurofours.com/es" target="_blank" style="flex-basis: 100%; text-align: center;">
-    <img src="eurofours.png" alt="Logo Eurofours" style="height: 50px; opacity: 0.5;">
-</a>
+            <img src="eurofours.png" alt="Logo Eurofours" style="height: 50px; opacity: 0.5;">
+        </a>        
+    </div>
+    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-bottom: 10px;">
+        <a href="https://www.infrico.com/" target="_blank">
+            <img src="infrico.png" alt="Logo Infrico" style="height: 50px; opacity: 0.5;">
         </a>
+        <a href="https://www.miele.com/" target="_blank">
+            <img src="miele.png" alt="Logo Miele" style="height: 50px; opacity: 0.5;">
+        </a>
+        <a href="https://www.fricosmos.com/" target="_blank">
+            <img src="fricosmos.png" alt="Logo Fricosmos" style="height: 50px; opacity: 0.5;">
+        </a>
+        <a href="https://www.impafri.com/" target="_blank">
+            <img src="impafri.png" alt="Logo Impafri" style="height: 37.5px; opacity: 0.5;"> <!-- Reducido 25% -->
+        </a>
+        <a href="https://www.intarcon.com/" target="_blank">
+            <img src="intarcon.png" alt="Logo Intarcon" style="height: 30px; opacity: 0.5;"> <!-- Reducido 25% -->
+        </a>
+        <a href="https://www.tecnoinox.it/" target="_blank">
+            <img src="tecnoinox.png" alt="Logo Tecnoinox" style="height: 50px; opacity: 0.5;">
+        </a>        
+        <a href="https://www.eurofours.com/es" target="_blank" style="flex-basis: 100%; text-align: center;">
+            <img src="eurofours.png" alt="Logo Eurofours" style="height: 50px; opacity: 0.5;">
+        </a>        
     </div>
     <br>
     <p>©2025 GastroSat. Todos los derechos reservados.</p>
