--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ img.logo {
 
     /* Evitar que el contenido se superponga con el logo */
     .content {
-        padding-left: 350px; /* Ajusta este valor según el tamaño del logo */
+        margin-left: 350px; /* Ajusta este valor según el tamaño del logo */
     }
 }
 
