--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@ img.logo {
 
     /* Evitar que el contenido se superponga con el logo */
     .content {
-        margin-left: 350px; /* Ajusta este valor según el tamaño del logo */
+        max-width: 650px;  /* Mantiene un límite en el tamaño */
+        padding-left: 320px;  /* Empuja el contenido a la derecha sin romper la alineación */
+        margin: 0 auto;  /* Mantiene el contenido centrado */
     }
 }
 
