--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@ img.logo {
     }
 
     .logo {
-        max-width: 200px; /* Ajusta el tamaño del logo */
+        position: fixed; /* Fija el logo en la pantalla */
+        top: 20px;  /* Ajusta la distancia desde arriba */
+        left: 50px; /* Ajusta la distancia desde la izquierda */
+        max-width: 200px; /* Tamaño del logo */
         height: auto;
-        align-self: flex-start; /* Asegura que el logo esté arriba */
-        margin-top: 100px; /* Ajusta la distancia desde arriba */
+        z-index: 1000; /* Asegura que esté por encima del contenido */
     }
 
     .content {
