--- a/index.html
+++ b/index.html
@@ -27,14 +27,11 @@ img.logo {
     }
 
     .logo {
-        position: fixed; /* Fija el logo en la pantalla */
-        top: 20px;  /* Ajusta la distancia desde arriba */
-        left: 50px; /* Ajusta la distancia desde la izquierda */
-        max-width: 300px; /* Tamaño del logo */
+        max-width: 300px; /* Ajusta el tamaño del logo */
         height: auto;
-        z-index: 1000; /* Asegura que esté por encima del contenido */
+        align-self: flex-start; /* Asegura que el logo esté arriba */
+        margin-top: 20px; /* Ajusta la distancia desde arriba */
     }
-
     .content {
         text-align: left;
         max-width: 650px;
