--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ img.logo {
     }
 
     .logo {
+        position: sticky;
         max-width: 300px; /* Ajusta el tamaño del logo */
         height: auto;
         align-self: flex-start; /* Asegura que el logo esté arriba */
