--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ img.logo {
 
     .logo {
         position: sticky;
+        top: 90px;
         max-width: 300px; /* Ajusta el tamaño del logo */
         height: auto;
         align-self: flex-start; /* Asegura que el logo esté arriba */
