--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ img.logo {
     }
 
     .logo {
-        position: stiky;
+        position: sticky;
         top: 0px;
         max-width: 300px; /* Ajusta el tamaño del logo */
         height: auto;
