--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@ img.logo {
     max-width: 300px;
     height: auto;
 }
+@media screen and (max-width: 950px) {
+    .logo {
+        position: static; /* Elimina la propiedad sticky */
+    }
+}
 
 /* Ajuste para escritorio */
 @media screen and (min-width: 768px) { 
