--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ img.logo {
 }
 @media screen and (min-width: 1180px) {
     .logo {
-        position: ; /* Elimina la propiedad sticky */
+        position: sticky; /* Elimina la propiedad sticky */
         top: 20px;
     }
 }
