--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ img.logo {
 
     <div class="wrapper" style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 20px; max-width: 90%; margin: auto;">
         <!-- Logo -->
-        <img src="logov5_1.png" alt="GastroSat Logo" class="logo">
+        <img src="logov5_1.svg" alt="GastroSat Logo" class="logo">
 
         <!-- Caja de contenido sin borde -->
         <div class="content" style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
