--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ img.logo {
 }
 
 </style>
-    
+<link rel="preload" href="logov5.svg" as="image" type="image/svg+xml">
     <!-- Favicon estándar -->
 <link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
 
