--- a/index.html
+++ b/index.html
@@ -43,7 +43,16 @@ img.logo {
         max-width: 650px;
     }
 }
+a {
+    color: #007bff;
+    text-decoration: none;
+    transition: all 0.3s ease-in-out;
+}
 
+a:hover {
+    color: #02bcb3;
+    text-decoration: underline;
+}
 </style>
 <link rel="preload" href="logov5.svg" as="image" type="image/svg+xml">
     <!-- Favicon estándar -->
