--- a/index.html
+++ b/index.html
@@ -46,12 +46,23 @@ img.logo {
 a {
     color: #007bff;
     text-decoration: none;
-    transition: all 0.3s ease-in-out;
+    position: relative;
 }
 
-a:hover {
-    color: #02bcb3;
-    text-decoration: underline;
+a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    width: 100%;
+    height: 2px;
+    background-color: #ff4500;
+    transform: scaleX(0);
+    transition: transform 0.3s ease-in-out;
+}
+
+a:hover::after {
+    transform: scaleX(1);
 }
 </style>
 <link rel="preload" href="logov5.svg" as="image" type="image/svg+xml">
