--- a/index.html
+++ b/index.html
@@ -46,23 +46,12 @@ img.logo {
 a {
     color: #007bff;
     text-decoration: none;
-    position: relative;
+    transition: all 0.3s ease-in-out;
 }
 
-a::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -3px;
-    width: 100%;
-    height: 2px;
-    background-color: #ff4500;
-    transform: scaleX(0);
-    transition: transform 0.3s ease-in-out;
-}
-
-a:hover::after {
-    transform: scaleX(1);
+a:hover {
+    color: #ff4500;  /* Cambia a naranja */
+    text-decoration: underline;  /* Subrayado */
 }
 </style>
 <link rel="preload" href="logov5.svg" as="image" type="image/svg+xml">
