--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ a {
 }
 
 a:hover {
-    color: #ff4500;  /* Cambia a naranja */
-    text-decoration: underline;  /* Subrayado */
+    color: #004960; 
+    text-decoration: underline;
 }
 </style>
 <link rel="preload" href="logov5.svg" as="image" type="image/svg+xml">
