--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@ a:hover {
     color: #02bcb3; 
     text-decoration: underline;
 }
+        /* Ajuste de opacidad en estado normal */
+footer img {
+    opacity: 0.5;
+    transition: opacity 0.3s ease-in-out;
+}
+
+/* Recupera la opacidad al pasar el ratón */
+footer img:hover {
+    opacity: 1;
+}
+
 </style>
 <link rel="preload" href="logov5.svg" as="image" type="image/svg+xml">
     <!-- Favicon estándar -->
