--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ footer img:hover {
     <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-bottom: 10px;">
         
     <a href="https://www.infrico.com/" target="_blank">
-        <img src="logos_proveedores/infrico.png" alt="Logo Infrico" style="height: 50px; opacity: 0.5;" loading="lazy">
+        <img src="logos_proveedores/infrico.png" alt="Logo Infrico" style="height: 50px;" loading="lazy">
     </a>
     <a href="https://www.miele.com/" target="_blank">
         <img src="logos_proveedores/miele.png" alt="Logo Miele" style="height: 50px; opacity: 0.5;" loading="lazy">
