--- a/index.html
+++ b/index.html
@@ -167,24 +167,24 @@ footer img:hover {
         <img src="logos_proveedores/infrico.png" alt="Logo Infrico" style="height: 50px;" loading="lazy">
     </a>
     <a href="https://www.miele.com/" target="_blank">
-        <img src="logos_proveedores/miele.png" alt="Logo Miele" style="height: 50px; opacity: 0.5;" loading="lazy">
+        <img src="logos_proveedores/miele.png" alt="Logo Miele" style="height: 50px;" loading="lazy">
     </a>
     <a href="https://www.fricosmos.com/" target="_blank">
-        <img src="logos_proveedores/fricosmos.png" alt="Logo Fricosmos" style="height: 50px; opacity: 0.5;" loading="lazy">
+        <img src="logos_proveedores/fricosmos.png" alt="Logo Fricosmos" style="height: 50px;" loading="lazy">
     </a>
     <a href="https://www.impafri.com/" target="_blank">
-        <img src="logos_proveedores/impafri.png" alt="Logo Impafri" style="height: 37.5px; opacity: 0.5;" loading="lazy"> <!-- Reducido 25% -->
+        <img src="logos_proveedores/impafri.png" alt="Logo Impafri" style="height: 37.5px;" loading="lazy"> <!-- Reducido 25% -->
     </a>
     <a href="https://www.intarcon.com/" target="_blank">
-        <img src="logos_proveedores/intarcon.png" alt="Logo Intarcon" style="height: 30px; opacity: 0.5;" loading="lazy"> <!-- Reducido 25% -->
+        <img src="logos_proveedores/intarcon.png" alt="Logo Intarcon" style="height: 30px;" loading="lazy"> <!-- Reducido 25% -->
     </a>
     <a href="https://www.tecnoinox.it/" target="_blank">
-        <img src="logos_proveedores/tecnoinox.png" alt="Logo Tecnoinox" style="height: 50px; opacity: 0.5;" loading="lazy">
+        <img src="logos_proveedores/tecnoinox.png" alt="Logo Tecnoinox" style="height: 50px;" loading="lazy">
     </a>     
 </div>
 <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-bottom: 10px;">
     <a href="https://www.eurofours.com/es" target="_blank">
-        <img src="logos_proveedores/eurofours.png" alt="Logo Eurofours" style="height: 50px; opacity: 0.5;" loading="lazy">
+        <img src="logos_proveedores/eurofours.png" alt="Logo Eurofours" style="height: 50px;" loading="lazy">
     </a>   
 </div>
     <br>
