--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ a {
 }
 
 a:hover {
-    color: #02bcb3; 
+    color: #007bff; 
     text-decoration: underline;
 }
         /* Ajuste de opacidad en estado normal */
