--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ footer img:hover {
         <img src="logos_proveedores/impafri.png" alt="Logo Impafri" style="height: 37.5px;" loading="lazy"> <!-- Reducido 25% -->
     </a>
     <a href="https://www.intarcon.com/" target="_blank">
-        <img src="logos_proveedores/intarcon.png" alt="Logo Intarcon" style="height: 30px;" loading="lazy"> <!-- Reducido 25% -->
+        <img src="logos_proveedores/intarcon.png" alt="Logo Intarcon" style="height: 30px; margin-top: 10px;" loading="lazy"> <!-- Reducido 25% -->
     </a>
     <a href="https://www.tecnoinox.it/" target="_blank">
         <img src="logos_proveedores/tecnoinox.png" alt="Logo Tecnoinox" style="height: 50px;" loading="lazy">
