--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ footer img:hover {
     </a>   
 </div>
     <br>
-    <p>©2025 GastroSat. Todos los derechos reservados.</p>
+    <p>©2025 GastroSat. Algunos derechos reservados.</p>
     <p>Desarrollado con 💚 por <strong>GastroSat</strong></p>
 </footer>
 
