--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@ footer img:hover {
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/tctdlsbd8q8qyyg4d0chg/Cat-logo-Lavavajillas-Octubre-2023.pdf?rlkey=hp4f435w3yfjrqst4kd6em7be&st=xhpvd582&dl=1" target="_blank">Catálogo MIELE.pdf (lavavajillas Profesionales)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/pihfekzouj25vwgf5rqw9/catalogo_lavanderia_miele.pdf?rlkey=3juxi7dyqooxftx11vwfdnfke&st=dctb3kxa&dl=1" target="_blank">Catálogo MIELE.pdf (lavandería)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?rlkey=9xzodewwbvzrrrijmlw18vyta&st=3k2zqcps&dl=1" target="_blank">Catálogo TECNOINOX.pdf</a></li>
+                <li>📄 <a href="https://www.dropbox.com/s/2lmj6cml6e0gsuy/Cat%C3%A1logo%202025%20cp.pdf?st=jbir9qua&dl=1" target="_blank">Catálogo EDENOX.pdf</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/96hoy8xqt3nukgzh481es/Eurofours-2022.pdf?rlkey=l6i6b39z83brgk08yo685rkcr&st=xthxplmt&dl=1" target="_blank">Catálogo EUROFOURS.pdf (Panadería)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/tie326s9yegvzfb84c52c/camaras-infrico.pdf?rlkey=ml89uyxfxkkoab9eu5z4boty2&st=y7ypo0gf&dl=1" target="_blank">Catálogo IMPAFRI.pdf (cámaras)</a></li>
                 <li>📄 <a href="https://www.dropbox.com/scl/fi/mcprpl7zdrv4l1zbg5pfp/catalogo-fribuffet.pdf?rlkey=0djsldozy48xe8dxrtkuzv3fa&st=qu6rmibv&dl=1" target="_blank">Catálogo FRIBUFFET.pdf</a></li>
