--- a/privacidad.html
+++ b/privacidad.html
@@ -95,7 +95,7 @@ footer img:hover {
         <!-- Caja de contenido sin borde -->
         <div class="content" style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
             <h2>Política de privacidad</h2>
-            <p><strong>De acuerdo con el Reglamento (UE) 2016/679 (GDPR) y la Ley Orgánica 3/2018 (LOPDGDD), le informamos que sus datos personales han sido incorporados a un fichero titularidad de Gastrosat, con la finalidad de gestionar la relación comercial. Puede ejercer sus derechos de acceso, rectificación, supresión, oposición, limitación y portabilidad enviando un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></strong></p>
+            <p>De acuerdo con el Reglamento (UE) 2016/679 (GDPR) y la Ley Orgánica 3/2018 (LOPDGDD), le informamos que sus datos personales han sido incorporados a un fichero titularidad de Gastrosat, con la finalidad de gestionar la relación comercial. Puede ejercer sus derechos de acceso, rectificación, supresión, oposición, limitación y portabilidad enviando un correo a <a href="mailto:info@gastrosat.com">info@gastrosat.com</a></p>
 
         </div>
 
