--- a/index.html
+++ b/index.html
@@ -119,17 +119,40 @@ footer img:hover {
             <ul style="list-style: none; padding: 0;">
 <li>📄 <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?raw=1" target="_blank">Ver Catálogo INFRICO.pdf</a> |
 <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?dl=1">Descargar</a></li>
-                <li>📄 <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?rlkey=yo8yelhafefxjrv0tbzqsrw9b&st=w2t61pr4&dl=1" target="_blank">Catálogo FRICOSMOS.pdf (inox varios)</a></li>
-                <li>📄 <a href="https://www.dropbox.com/scl/fi/tctdlsbd8q8qyyg4d0chg/Cat-logo-Lavavajillas-Octubre-2023.pdf?rlkey=hp4f435w3yfjrqst4kd6em7be&st=xhpvd582&dl=1" target="_blank">Catálogo MIELE.pdf (lavavajillas Profesionales)</a></li>
-                <li>📄 <a href="https://www.dropbox.com/scl/fi/pihfekzouj25vwgf5rqw9/catalogo_lavanderia_miele.pdf?rlkey=3juxi7dyqooxftx11vwfdnfke&st=dctb3kxa&dl=1" target="_blank">Catálogo MIELE.pdf (lavandería)</a></li>
-                <li>📄 <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?rlkey=9xzodewwbvzrrrijmlw18vyta&st=3k2zqcps&dl=1" target="_blank">Catálogo TECNOINOX.pdf</a></li>
-                <li>📄 <a href="https://www.dropbox.com/s/2lmj6cml6e0gsuy/Cat%C3%A1logo%202025%20cp.pdf?st=jbir9qua&dl=1" target="_blank">Catálogo EDENOX.pdf</a></li>
-                <li>📄 <a href="https://www.dropbox.com/scl/fi/96hoy8xqt3nukgzh481es/Eurofours-2022.pdf?rlkey=l6i6b39z83brgk08yo685rkcr&st=xthxplmt&dl=1" target="_blank">Catálogo EUROFOURS.pdf (Panadería)</a></li>
-                <li>📄 <a href="https://www.dropbox.com/scl/fi/tie326s9yegvzfb84c52c/camaras-infrico.pdf?rlkey=ml89uyxfxkkoab9eu5z4boty2&st=y7ypo0gf&dl=1" target="_blank">Catálogo IMPAFRI.pdf (cámaras)</a></li>
-                <li>📄 <a href="https://www.dropbox.com/scl/fi/mcprpl7zdrv4l1zbg5pfp/catalogo-fribuffet.pdf?rlkey=0djsldozy48xe8dxrtkuzv3fa&st=qu6rmibv&dl=1" target="_blank">Catálogo FRIBUFFET.pdf</a></li>
-                <li>📄 <a href="https://www.dropbox.com/scl/fi/51hkfsvzcrjarr2lahv1g/cocinas-infrico.pdf?rlkey=tvg9nj444lacx6isadb5fjcw7&st=bo43aoy5&dl=1" target="_blank">Catálogo INFRICO.pdf (cocinas)</a></li>
-                <li>📄 <a href="https://www.dropbox.com/scl/fi/p194xho3erz2bhh1rocbu/catalogo-Infrico-supermarket.pdf?rlkey=ui57s8sz81zkks9bhpqtlepwr&st=yz7esm8j&dl=1" target="_blank">Catálogo INFRICO.pdf (supermarket)</a></li>
-                <li>📄 <a href="https://www.dropbox.com/scl/fi/2kblm53xos5jqung8ghf5/repuestos-by-you.pdf?rlkey=cju96n5komyjh98bomi79c121&st=vwqe0s6b&dl=1" target="_blank">Catálogo INFRICO BY YOU.pdf (repuestos)</a></li>
+
+<li>📄 <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?raw=1" target="_blank">Ver Catálogo FRICOSMOS.pdf (inox varios)</a> | 
+<a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?dl=1">Descargar</a></li>
+
+<li>📄 <a href="https://www.dropbox.com/scl/fi/tctdlsbd8q8qyyg4d0chg/Cat-logo-Lavavajillas-Octubre-2023.pdf?raw=1" target="_blank">Ver Catálogo MIELE.pdf (lavavajillas Profesionales)</a> | 
+<a href="https://www.dropbox.com/scl/fi/tctdlsbd8q8qyyg4d0chg/Cat-logo-Lavavajillas-Octubre-2023.pdf?dl=1">Descargar</a></li>
+
+<li>📄 <a href="https://www.dropbox.com/scl/fi/pihfekzouj25vwgf5rqw9/catalogo_lavanderia_miele.pdf?raw=1" target="_blank">Ver Catálogo MIELE.pdf (lavandería)</a> | 
+<a href="https://www.dropbox.com/scl/fi/pihfekzouj25vwgf5rqw9/catalogo_lavanderia_miele.pdf?dl=1">Descargar</a></li>
+
+<li>📄 <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?raw=1" target="_blank">Ver Catálogo TECNOINOX.pdf</a> | 
+<a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?dl=1">Descargar</a></li>
+
+<li>📄 <a href="https://www.dropbox.com/s/2lmj6cml6e0gsuy/Cat%C3%A1logo%202025%20cp.pdf?raw=1" target="_blank">Ver Catálogo EDENOX.pdf</a> | 
+<a href="https://www.dropbox.com/s/2lmj6cml6e0gsuy/Cat%C3%A1logo%202025%20cp.pdf?dl=1">Descargar</a></li>
+
+<li>📄 <a href="https://www.dropbox.com/scl/fi/96hoy8xqt3nukgzh481es/Eurofours-2022.pdf?raw=1" target="_blank">Ver Catálogo EUROFOURS.pdf (Panadería)</a> | 
+<a href="https://www.dropbox.com/scl/fi/96hoy8xqt3nukgzh481es/Eurofours-2022.pdf?dl=1">Descargar</a></li>
+
+<li>📄 <a href="https://www.dropbox.com/scl/fi/tie326s9yegvzfb84c52c/camaras-infrico.pdf?raw=1" target="_blank">Ver Catálogo IMPAFRI.pdf (cámaras)</a> | 
+<a href="https://www.dropbox.com/scl/fi/tie326s9yegvzfb84c52c/camaras-infrico.pdf?dl=1">Descargar</a></li>
+
+<li>📄 <a href="https://www.dropbox.com/scl/fi/mcprpl7zdrv4l1zbg5pfp/catalogo-fribuffet.pdf?raw=1" target="_blank">Ver Catálogo FRIBUFFET.pdf</a> | 
+<a href="https://www.dropbox.com/scl/fi/mcprpl7zdrv4l1zbg5pfp/catalogo-fribuffet.pdf?dl=1">Descargar</a></li>
+
+<li>📄 <a href="https://www.dropbox.com/scl/fi/51hkfsvzcrjarr2lahv1g/cocinas-infrico.pdf?raw=1" target="_blank">Ver Catálogo INFRICO.pdf (cocinas)</a> | 
+<a href="https://www.dropbox.com/scl/fi/51hkfsvzcrjarr2lahv1g/cocinas-infrico.pdf?dl=1">Descargar</a></li>
+
+<li>📄 <a href="https://www.dropbox.com/scl/fi/p194xho3erz2bhh1rocbu/catalogo-Infrico-supermarket.pdf?raw=1" target="_blank">Ver Catálogo INFRICO.pdf (supermarket)</a> | 
+<a href="https://www.dropbox.com/scl/fi/p194xho3erz2bhh1rocbu/catalogo-Infrico-supermarket.pdf?dl=1">Descargar</a></li>
+
+<li>📄 <a href="https://www.dropbox.com/scl/fi/2kblm53xos5jqung8ghf5/repuestos-by-you.pdf?raw=1" target="_blank">Ver Catálogo INFRICO BY YOU.pdf (repuestos)</a> | 
+<a href="https://www.dropbox.com/scl/fi/2kblm53xos5jqung8ghf5/repuestos-by-you.pdf?dl=1">Descargar</a></li>
+
             </ul>
             
             <br>
