--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ footer img:hover {
             <h3>📂 Descarga nuestros catálogos</h3>
             <ul style="list-style: none; padding: 0;">
 <li>📄 <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?raw=1" target="_blank">Ver Catálogo INFRICO.pdf</a> |
-<a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?dl=1">⬇️ Descargar</a></li>
+⬇️ <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?raw=1" target="_blank">Ver Catálogo FRICOSMOS.pdf (inox varios)</a> | 
 <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?dl=1">Descargar</a></li>
