--- a/index.html
+++ b/index.html
@@ -121,37 +121,37 @@ footer img:hover {
 ⬇️ <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?raw=1" target="_blank">Ver Catálogo FRICOSMOS.pdf (inox varios)</a> | 
-<a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?dl=1">Descargar</a></li>
+⬇️ <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/tctdlsbd8q8qyyg4d0chg/Cat-logo-Lavavajillas-Octubre-2023.pdf?raw=1" target="_blank">Ver Catálogo MIELE.pdf (lavavajillas Profesionales)</a> | 
-<a href="https://www.dropbox.com/scl/fi/tctdlsbd8q8qyyg4d0chg/Cat-logo-Lavavajillas-Octubre-2023.pdf?dl=1">Descargar</a></li>
+⬇️ <a href="https://www.dropbox.com/scl/fi/tctdlsbd8q8qyyg4d0chg/Cat-logo-Lavavajillas-Octubre-2023.pdf?dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/pihfekzouj25vwgf5rqw9/catalogo_lavanderia_miele.pdf?raw=1" target="_blank">Ver Catálogo MIELE.pdf (lavandería)</a> | 
-<a href="https://www.dropbox.com/scl/fi/pihfekzouj25vwgf5rqw9/catalogo_lavanderia_miele.pdf?dl=1">Descargar</a></li>
+⬇️ <a href="https://www.dropbox.com/scl/fi/pihfekzouj25vwgf5rqw9/catalogo_lavanderia_miele.pdf?dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?raw=1" target="_blank">Ver Catálogo TECNOINOX.pdf</a> | 
-<a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?dl=1">Descargar</a></li>
+⬇️ <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/s/2lmj6cml6e0gsuy/Cat%C3%A1logo%202025%20cp.pdf?raw=1" target="_blank">Ver Catálogo EDENOX.pdf</a> | 
-<a href="https://www.dropbox.com/s/2lmj6cml6e0gsuy/Cat%C3%A1logo%202025%20cp.pdf?dl=1">Descargar</a></li>
+⬇️ <a href="https://www.dropbox.com/s/2lmj6cml6e0gsuy/Cat%C3%A1logo%202025%20cp.pdf?dl=1">Descargar</a></li>
 
-<li>📄 <a href="https://www.dropbox.com/scl/fi/96hoy8xqt3nukgzh481es/Eurofours-2022.pdf?raw=1" target="_blank">Ver Catálogo EUROFOURS.pdf (Panadería)</a> | 
-<a href="https://www.dropbox.com/scl/fi/96hoy8xqt3nukgzh481es/Eurofours-2022.pdf?dl=1">Descargar</a></li>
+<li>📄 <a href="https://www.dropbox.com/scl/fi/k8eblivdg9qpihtqwu39n/Eurofours_cat-logo_2022.pdf?rlkey=86teqnfccyg0x5m0fpkabdtsu&st=gcpr8ll7&raw=1" target="_blank">Ver Catálogo EUROFOURS.pdf (Panadería)</a> | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/k8eblivdg9qpihtqwu39n/Eurofours_cat-logo_2022.pdf?rlkey=86teqnfccyg0x5m0fpkabdtsu&st=gcpr8ll7&dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/tie326s9yegvzfb84c52c/camaras-infrico.pdf?raw=1" target="_blank">Ver Catálogo IMPAFRI.pdf (cámaras)</a> | 
-<a href="https://www.dropbox.com/scl/fi/tie326s9yegvzfb84c52c/camaras-infrico.pdf?dl=1">Descargar</a></li>
+⬇️ <a href="https://www.dropbox.com/scl/fi/tie326s9yegvzfb84c52c/camaras-infrico.pdf?dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/mcprpl7zdrv4l1zbg5pfp/catalogo-fribuffet.pdf?raw=1" target="_blank">Ver Catálogo FRIBUFFET.pdf</a> | 
-<a href="https://www.dropbox.com/scl/fi/mcprpl7zdrv4l1zbg5pfp/catalogo-fribuffet.pdf?dl=1">Descargar</a></li>
+⬇️ <a href="https://www.dropbox.com/scl/fi/mcprpl7zdrv4l1zbg5pfp/catalogo-fribuffet.pdf?dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/51hkfsvzcrjarr2lahv1g/cocinas-infrico.pdf?raw=1" target="_blank">Ver Catálogo INFRICO.pdf (cocinas)</a> | 
-<a href="https://www.dropbox.com/scl/fi/51hkfsvzcrjarr2lahv1g/cocinas-infrico.pdf?dl=1">Descargar</a></li>
+⬇️ <a href="https://www.dropbox.com/scl/fi/51hkfsvzcrjarr2lahv1g/cocinas-infrico.pdf?dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/p194xho3erz2bhh1rocbu/catalogo-Infrico-supermarket.pdf?raw=1" target="_blank">Ver Catálogo INFRICO.pdf (supermarket)</a> | 
-<a href="https://www.dropbox.com/scl/fi/p194xho3erz2bhh1rocbu/catalogo-Infrico-supermarket.pdf?dl=1">Descargar</a></li>
+⬇️ <a href="https://www.dropbox.com/scl/fi/p194xho3erz2bhh1rocbu/catalogo-Infrico-supermarket.pdf?dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/2kblm53xos5jqung8ghf5/repuestos-by-you.pdf?raw=1" target="_blank">Ver Catálogo INFRICO BY YOU.pdf (repuestos)</a> | 
-<a href="https://www.dropbox.com/scl/fi/2kblm53xos5jqung8ghf5/repuestos-by-you.pdf?dl=1">Descargar</a></li>
+⬇️ <a href="https://www.dropbox.com/scl/fi/2kblm53xos5jqung8ghf5/repuestos-by-you.pdf?dl=1">Descargar</a></li>
 
             </ul>
             
