--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ footer img:hover {
             <br>
             <hr>
 
-            <h3>📂 Descarga nuestros catálogos</h3>
+            <h3>📂 Explora nuestros catálogos</h3>
             <ul style="list-style: none; padding: 0;">
 <li>📄 <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?raw=1" target="_blank">Ver Catálogo INFRICO.pdf</a> |
 ⬇️ <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?dl=1">Descargar</a></li>
@@ -132,8 +132,8 @@ footer img:hover {
 <li>📄 <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?raw=1" target="_blank">Ver Catálogo TECNOINOX.pdf</a> | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?dl=1">Descargar</a></li>
 
-<li>📄 <a href="https://www.dropbox.com/s/2lmj6cml6e0gsuy/Cat%C3%A1logo%202025%20cp.pdf?raw=1" target="_blank">Ver Catálogo EDENOX.pdf</a> | 
-⬇️ <a href="https://www.dropbox.com/s/2lmj6cml6e0gsuy/Cat%C3%A1logo%202025%20cp.pdf?dl=1">Descargar</a></li>
+<li>📄 <a href="https://www.dropbox.com/scl/fi/49o0ieeaelw6g1q737dyy/Edenox_cat-logo_general.pdf?rlkey=3wef71ugq135elodg29shvykc&st=n69v2yaz&raw=1" target="_blank">Ver Catálogo EDENOX.pdf</a> | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/49o0ieeaelw6g1q737dyy/Edenox_cat-logo_general.pdf?rlkey=3wef71ugq135elodg29shvykc&st=n69v2yaz&dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/k8eblivdg9qpihtqwu39n/Eurofours_cat-logo_2022.pdf?rlkey=86teqnfccyg0x5m0fpkabdtsu&st=gcpr8ll7&raw=1" target="_blank">Ver Catálogo EUROFOURS.pdf (Panadería)</a> | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/k8eblivdg9qpihtqwu39n/Eurofours_cat-logo_2022.pdf?rlkey=86teqnfccyg0x5m0fpkabdtsu&st=gcpr8ll7&dl=1">Descargar</a></li>
