--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ footer img:hover {
 <li>📄 <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?raw=1" target="_blank">Ver Catálogo INFRICO.pdf</a> |
 ⬇️ <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?dl=1">Descargar</a></li>
 
-<li>📄 <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?raw=1" target="_blank">Ver Catálogo FRICOSMOS.pdf (inox varios)</a> | 
-⬇️ <a href="https://www.dropbox.com/scl/fi/2g1cb4fo91wr6egd46vd6/FRICOSMOS_Catalogo_2023-24_v1.01.pdf?dl=1">Descargar</a></li>
+<li>📄 <a href="https://www.dropbox.com/scl/fi/74rz2mxty2q4tnvvlf4dp/Fricosmos_cat-logo_2023.pdf?rlkey=eyt9pk3ma6k4zr0mbivmarh6p&st=kyqx66en&raw=1" target="_blank">Ver Catálogo FRICOSMOS.pdf (inox varios)</a> | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/74rz2mxty2q4tnvvlf4dp/Fricosmos_cat-logo_2023.pdf?rlkey=eyt9pk3ma6k4zr0mbivmarh6p&st=kyqx66en&dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/tctdlsbd8q8qyyg4d0chg/Cat-logo-Lavavajillas-Octubre-2023.pdf?raw=1" target="_blank">Ver Catálogo MIELE.pdf (lavavajillas Profesionales)</a> | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/tctdlsbd8q8qyyg4d0chg/Cat-logo-Lavavajillas-Octubre-2023.pdf?dl=1">Descargar</a></li>
@@ -144,14 +144,14 @@ footer img:hover {
 <li>📄 <a href="https://www.dropbox.com/scl/fi/mcprpl7zdrv4l1zbg5pfp/catalogo-fribuffet.pdf?raw=1" target="_blank">Ver Catálogo FRIBUFFET.pdf</a> | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/mcprpl7zdrv4l1zbg5pfp/catalogo-fribuffet.pdf?dl=1">Descargar</a></li>
 
-<li>📄 <a href="https://www.dropbox.com/scl/fi/51hkfsvzcrjarr2lahv1g/cocinas-infrico.pdf?raw=1" target="_blank">Ver Catálogo INFRICO.pdf (cocinas)</a> | 
-⬇️ <a href="https://www.dropbox.com/scl/fi/51hkfsvzcrjarr2lahv1g/cocinas-infrico.pdf?dl=1">Descargar</a></li>
+<li>📄 <a href="https://www.dropbox.com/scl/fi/esh21dszbb0nmtolichwb/Infrico_cat-logo_cocinas.pdf?rlkey=8apnaxitx3d1eqnj35lkcgoek&st=xu08eqsy&raw=1" target="_blank">Ver Catálogo INFRICO.pdf (cocinas)</a> | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/esh21dszbb0nmtolichwb/Infrico_cat-logo_cocinas.pdf?rlkey=8apnaxitx3d1eqnj35lkcgoek&st=xu08eqsy&dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/p194xho3erz2bhh1rocbu/catalogo-Infrico-supermarket.pdf?raw=1" target="_blank">Ver Catálogo INFRICO.pdf (supermarket)</a> | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/p194xho3erz2bhh1rocbu/catalogo-Infrico-supermarket.pdf?dl=1">Descargar</a></li>
 
-<li>📄 <a href="https://www.dropbox.com/scl/fi/2kblm53xos5jqung8ghf5/repuestos-by-you.pdf?raw=1" target="_blank">Ver Catálogo INFRICO BY YOU.pdf (repuestos)</a> | 
-⬇️ <a href="https://www.dropbox.com/scl/fi/2kblm53xos5jqung8ghf5/repuestos-by-you.pdf?dl=1">Descargar</a></li>
+<li>📄 <a href="https://www.dropbox.com/scl/fi/7jvjee8oyii4ska201oj5/Infrico_by_you.pdf?rlkey=xjzyzkru03z7wvivu9cs2i2yt&st=4k3246pj&raw=1" target="_blank">Ver Catálogo INFRICO BY YOU.pdf (repuestos)</a> | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/7jvjee8oyii4ska201oj5/Infrico_by_you.pdf?rlkey=xjzyzkru03z7wvivu9cs2i2yt&st=4k3246pj&dl=1">Descargar</a></li>
 
             </ul>
             
