--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@ footer img:hover {
 <li>📄 <a href="https://www.dropbox.com/scl/fi/74rz2mxty2q4tnvvlf4dp/Fricosmos_cat-logo_2023.pdf?rlkey=eyt9pk3ma6k4zr0mbivmarh6p&st=kyqx66en&raw=1" target="_blank">Ver Catálogo FRICOSMOS.pdf (inox varios)</a> | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/74rz2mxty2q4tnvvlf4dp/Fricosmos_cat-logo_2023.pdf?rlkey=eyt9pk3ma6k4zr0mbivmarh6p&st=kyqx66en&dl=1">Descargar</a></li>
 
-<li>📄 <a href="https://www.dropbox.com/scl/fi/tctdlsbd8q8qyyg4d0chg/Cat-logo-Lavavajillas-Octubre-2023.pdf?raw=1" target="_blank">Ver Catálogo MIELE.pdf (lavavajillas Profesionales)</a> | 
-⬇️ <a href="https://www.dropbox.com/scl/fi/tctdlsbd8q8qyyg4d0chg/Cat-logo-Lavavajillas-Octubre-2023.pdf?dl=1">Descargar</a></li>
+<li>📄 <a href="https://www.dropbox.com/scl/fi/l4uce4218a1qj7rl3n2kz/Miele_cat-logo_lavavajillas_2023.pdf?rlkey=z7c8da3l9hjt5mlin2ld1klvj&st=nynbnyao&raw=1" target="_blank">Ver Catálogo MIELE.pdf (lavavajillas Profesionales)</a> | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/l4uce4218a1qj7rl3n2kz/Miele_cat-logo_lavavajillas_2023.pdf?rlkey=z7c8da3l9hjt5mlin2ld1klvj&st=nynbnyao&dl=1">Descargar</a></li>
 
-<li>📄 <a href="https://www.dropbox.com/scl/fi/pihfekzouj25vwgf5rqw9/catalogo_lavanderia_miele.pdf?raw=1" target="_blank">Ver Catálogo MIELE.pdf (lavandería)</a> | 
-⬇️ <a href="https://www.dropbox.com/scl/fi/pihfekzouj25vwgf5rqw9/catalogo_lavanderia_miele.pdf?dl=1">Descargar</a></li>
+<li>📄 <a href="https://www.dropbox.com/scl/fi/7ktpu8ea8se98r1fah31j/Miele_cat-logo_lavanderia.pdf?rlkey=i6fyzo9jm5wap0xo6s9xgsu9q&st=apzytixj&raw=1" target="_blank">Ver Catálogo MIELE.pdf (lavandería)</a> | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/7ktpu8ea8se98r1fah31j/Miele_cat-logo_lavanderia.pdf?rlkey=i6fyzo9jm5wap0xo6s9xgsu9q&st=apzytixj&dl=1">Descargar</a></li>
 
-<li>📄 <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?raw=1" target="_blank">Ver Catálogo TECNOINOX.pdf</a> | 
-⬇️ <a href="https://www.dropbox.com/scl/fi/c8cs41gs00pn1z90e3tf5/Tecnoinox_Catalogo.pdf?dl=1">Descargar</a></li>
+<li>📄 <a href="https://www.dropbox.com/scl/fi/2r1tnphsusfot84l4gm79/Tecnoinox_cat-logo.pdf?rlkey=h41g48udsg0hd7r5ufmxderbb&st=l8m948kv&raw=1" target="_blank">Ver Catálogo TECNOINOX.pdf</a> | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/2r1tnphsusfot84l4gm79/Tecnoinox_cat-logo.pdf?rlkey=h41g48udsg0hd7r5ufmxderbb&st=l8m948kv&dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/49o0ieeaelw6g1q737dyy/Edenox_cat-logo_general.pdf?rlkey=3wef71ugq135elodg29shvykc&st=n69v2yaz&raw=1" target="_blank">Ver Catálogo EDENOX.pdf</a> | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/49o0ieeaelw6g1q737dyy/Edenox_cat-logo_general.pdf?rlkey=3wef71ugq135elodg29shvykc&st=n69v2yaz&dl=1">Descargar</a></li>
@@ -138,17 +138,17 @@ footer img:hover {
 <li>📄 <a href="https://www.dropbox.com/scl/fi/k8eblivdg9qpihtqwu39n/Eurofours_cat-logo_2022.pdf?rlkey=86teqnfccyg0x5m0fpkabdtsu&st=gcpr8ll7&raw=1" target="_blank">Ver Catálogo EUROFOURS.pdf (Panadería)</a> | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/k8eblivdg9qpihtqwu39n/Eurofours_cat-logo_2022.pdf?rlkey=86teqnfccyg0x5m0fpkabdtsu&st=gcpr8ll7&dl=1">Descargar</a></li>
 
-<li>📄 <a href="https://www.dropbox.com/scl/fi/tie326s9yegvzfb84c52c/camaras-infrico.pdf?raw=1" target="_blank">Ver Catálogo IMPAFRI.pdf (cámaras)</a> | 
-⬇️ <a href="https://www.dropbox.com/scl/fi/tie326s9yegvzfb84c52c/camaras-infrico.pdf?dl=1">Descargar</a></li>
+<li>📄 <a href="https://www.dropbox.com/scl/fi/4ignuk6rrkanchkl4sgox/Impafri_cat-logo_c-maras.pdf?rlkey=yyeozwimkmchqbgeat3b2h884&st=hhzlvzmq&raw=1" target="_blank">Ver Catálogo IMPAFRI.pdf (cámaras)</a> | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/4ignuk6rrkanchkl4sgox/Impafri_cat-logo_c-maras.pdf?rlkey=yyeozwimkmchqbgeat3b2h884&st=hhzlvzmq&dl=1">Descargar</a></li>
 
-<li>📄 <a href="https://www.dropbox.com/scl/fi/mcprpl7zdrv4l1zbg5pfp/catalogo-fribuffet.pdf?raw=1" target="_blank">Ver Catálogo FRIBUFFET.pdf</a> | 
-⬇️ <a href="https://www.dropbox.com/scl/fi/mcprpl7zdrv4l1zbg5pfp/catalogo-fribuffet.pdf?dl=1">Descargar</a></li>
+<li>📄 <a href="https://www.dropbox.com/scl/fi/2jwj8s2drsaug0vbdg1oi/Infrico_cat-logo_fribuffet.pdf?rlkey=q43pi89290frnk5nqz0oxficl&st=xbvsojcl&raw=1" target="_blank">Ver Catálogo FRIBUFFET.pdf</a> | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/2jwj8s2drsaug0vbdg1oi/Infrico_cat-logo_fribuffet.pdf?rlkey=q43pi89290frnk5nqz0oxficl&st=xbvsojcl&dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/esh21dszbb0nmtolichwb/Infrico_cat-logo_cocinas.pdf?rlkey=8apnaxitx3d1eqnj35lkcgoek&st=xu08eqsy&raw=1" target="_blank">Ver Catálogo INFRICO.pdf (cocinas)</a> | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/esh21dszbb0nmtolichwb/Infrico_cat-logo_cocinas.pdf?rlkey=8apnaxitx3d1eqnj35lkcgoek&st=xu08eqsy&dl=1">Descargar</a></li>
 
-<li>📄 <a href="https://www.dropbox.com/scl/fi/p194xho3erz2bhh1rocbu/catalogo-Infrico-supermarket.pdf?raw=1" target="_blank">Ver Catálogo INFRICO.pdf (supermarket)</a> | 
-⬇️ <a href="https://www.dropbox.com/scl/fi/p194xho3erz2bhh1rocbu/catalogo-Infrico-supermarket.pdf?dl=1">Descargar</a></li>
+<li>📄 <a href="https://www.dropbox.com/scl/fi/503xawkxcfyfcwgtddr9l/Infrico_cat-logo_supermarket.pdf?rlkey=c5e6jva7sr4ctzlyopyg3i6y9&st=613sjmni&raw=1" target="_blank">Ver Catálogo INFRICO.pdf (supermarket)</a> | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/503xawkxcfyfcwgtddr9l/Infrico_cat-logo_supermarket.pdf?rlkey=c5e6jva7sr4ctzlyopyg3i6y9&st=613sjmni&dl=1">Descargar</a></li>
 
 <li>📄 <a href="https://www.dropbox.com/scl/fi/7jvjee8oyii4ska201oj5/Infrico_by_you.pdf?rlkey=xjzyzkru03z7wvivu9cs2i2yt&st=4k3246pj&raw=1" target="_blank">Ver Catálogo INFRICO BY YOU.pdf (repuestos)</a> | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/7jvjee8oyii4ska201oj5/Infrico_by_you.pdf?rlkey=xjzyzkru03z7wvivu9cs2i2yt&st=4k3246pj&dl=1">Descargar</a></li>
