--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@ footer img {
 footer img:hover {
     opacity: 1;
 }
+li {
+    margin-bottom: 12px;
+}
 
 </style>
 <link rel="preload" href="logov5.svg" as="image" type="image/svg+xml">
