--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ li {
             <br>
             <hr>
 
-            <h3>📂 Explora nuestros catálogos</h3>
+            <h3>📚 Explora nuestros catálogos</h3>
             <ul style="list-style: none; padding: 0;">
 <li>📖 <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?raw=1" target="_blank">Ver Catálogo INFRICO.pdf</a> |
 ⬇️ <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?dl=1">Descargar</a></li>
