--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@ li {
 <li>📖 <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?raw=1" target="_blank">Ver Catálogo INFRICO.pdf</a> |
 ⬇️ <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?dl=1">Descargar</a></li>
 
-<li>📖 <a href="https://www.dropbox.com/scl/fi/74rz2mxty2q4tnvvlf4dp/Fricosmos_cat-logo_2023.pdf?rlkey=eyt9pk3ma6k4zr0mbivmarh6p&st=kyqx66en&raw=1" target="_blank">Ver Catálogo FRICOSMOS.pdf (inox varios)</a> | 
-⬇️ <a href="https://www.dropbox.com/scl/fi/74rz2mxty2q4tnvvlf4dp/Fricosmos_cat-logo_2023.pdf?rlkey=eyt9pk3ma6k4zr0mbivmarh6p&st=kyqx66en&dl=1">Descargar</a></li>
+<li>📖 <a href="https://www.dropbox.com/scl/fi/74rz2mxty2q4tnvvlf4dp/Fricosmos_cat-logo_2023.pdf?rlkey=eyt9pk3ma6k4zr0mbivmarh6p&st=kyqx66en&raw=1" target="_blank">Ver Catálogo FRICOSMOS (inox varios)</a> | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/74rz2mxty2q4tnvvlf4dp/Fricosmos_cat-logo_2023.pdf?rlkey=eyt9pk3ma6k4zr0mbivmarh6p&st=kyqx66en&dl=1">Descargar pdf</a></li>
 
-<li>📖 <a href="https://www.dropbox.com/scl/fi/l4uce4218a1qj7rl3n2kz/Miele_cat-logo_lavavajillas_2023.pdf?rlkey=z7c8da3l9hjt5mlin2ld1klvj&st=nynbnyao&raw=1" target="_blank">Ver Catálogo MIELE.pdf (lavavajillas Profesionales)</a> | 
-⬇️ <a href="https://www.dropbox.com/scl/fi/l4uce4218a1qj7rl3n2kz/Miele_cat-logo_lavavajillas_2023.pdf?rlkey=z7c8da3l9hjt5mlin2ld1klvj&st=nynbnyao&dl=1">Descargar</a></li>
+<li>📖 <a href="https://www.dropbox.com/scl/fi/l4uce4218a1qj7rl3n2kz/Miele_cat-logo_lavavajillas_2023.pdf?rlkey=z7c8da3l9hjt5mlin2ld1klvj&st=nynbnyao&raw=1" target="_blank">Ver Catálogo MIELE (lavavajillas Profesionales)</a> | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/l4uce4218a1qj7rl3n2kz/Miele_cat-logo_lavavajillas_2023.pdf?rlkey=z7c8da3l9hjt5mlin2ld1klvj&st=nynbnyao&dl=1">Descargar PDF</a></li>
 
 <li>📖 <a href="https://www.dropbox.com/scl/fi/7ktpu8ea8se98r1fah31j/Miele_cat-logo_lavanderia.pdf?rlkey=i6fyzo9jm5wap0xo6s9xgsu9q&st=apzytixj&raw=1" target="_blank">Ver Catálogo MIELE.pdf (lavandería)</a> | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/7ktpu8ea8se98r1fah31j/Miele_cat-logo_lavanderia.pdf?rlkey=i6fyzo9jm5wap0xo6s9xgsu9q&st=apzytixj&dl=1">Descargar</a></li>
