--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ li {
 
             <h3>📚 Explora nuestros catálogos</h3>
             <ul style="list-style: none; padding: 0;">
-<li>📖 <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?raw=1" target="_blank">Ver Catálogo INFRICO.pdf</a> |
-⬇️ <a href="https://www.dropbox.com/s/4qke160xezajmty/CATALOGO%20INFRICO%202025%20WEB.pdf?dl=1">Descargar</a></li>
+<li>📖 <a href="https://www.dropbox.com/scl/fi/7azi0aroqvb1rf58zyauz/Infrico_cat-logo_general_2025.pdf?rlkey=09l5h3hrbyzhs6wdmnbykhb4y&st=waaqud6v&raw=1" target="_blank">Ver Catálogo INFRICO.pdf</a> |
+⬇️ <a href="https://www.dropbox.com/scl/fi/7azi0aroqvb1rf58zyauz/Infrico_cat-logo_general_2025.pdf?rlkey=09l5h3hrbyzhs6wdmnbykhb4y&st=waaqud6v&dl=1">Descargar</a></li>
 
 <li>📖 <a href="https://www.dropbox.com/scl/fi/74rz2mxty2q4tnvvlf4dp/Fricosmos_cat-logo_2023.pdf?rlkey=eyt9pk3ma6k4zr0mbivmarh6p&st=kyqx66en&raw=1" target="_blank">Ver Catálogo FRICOSMOS (inox varios)</a> | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/74rz2mxty2q4tnvvlf4dp/Fricosmos_cat-logo_2023.pdf?rlkey=eyt9pk3ma6k4zr0mbivmarh6p&st=kyqx66en&dl=1">Descargar pdf</a></li>
